--- a/assets/styles/scss/abstracts/mixins/_wireframes.scss
+++ b/assets/styles/scss/abstracts/mixins/_wireframes.scss
@@ -24,25 +24,23 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      background: linear-gradient(
-          to top right,
-          transparent calc(50% - 1px),
-          var(--wireframe--wire) calc(50% - 1px),
-          var(--wireframe--wire) calc(50% + 1px),
-          transparent calc(50% + 1px)
-        ),
-        linear-gradient(
-          to bottom right,
-          transparent calc(50% - 1px),
-          var(--wireframe--wire) calc(50% - 1px),
-          var(--wireframe--wire) calc(50% + 1px),
-          transparent calc(50% + 1px)
-        ),
+      background:
+        linear-gradient(to top right,
+        transparent calc(50% - 1px),
+        var(--wireframe--wire) calc(50% - 1px),
+        var(--wireframe--wire) calc(50% + 1px),
+        transparent calc(50% + 1px)),
+        linear-gradient(to bottom right,
+        transparent calc(50% - 1px),
+        var(--wireframe--wire) calc(50% - 1px),
+        var(--wireframe--wire) calc(50% + 1px),
+        transparent calc(50% + 1px)),
         var(--wireframe--bg-color);
       color: var(--wireframe--wire);
       content: attr(data-wf);
       font: bold 2em Jubilat, Georgia, serif;
-      text-shadow: 0 0 0.25em var(--wireframe--bg-color),
+      text-shadow:
+        0 0 0.25em var(--wireframe--bg-color),
         0 0 0.25em var(--wireframe--bg-color),
         0 0 0.25em var(--wireframe--bg-color),
         0 0 0.25em var(--wireframe--bg-color),
@@ -60,21 +58,25 @@
     // ! REFERENCE: <https://developer.mozilla.org/en-US/docs/Web/HTML/Element#href>
 
     // -  <<----------<< (1) Content Sectioning: Block >>---------->>
-    div,
-    address,
+
     article,
     aside,
     footer,
     header,
+    nav,
+    section {
+      outline: calc(#{$buffer--xxs} / 2) rgb(255, 0, 0) dashed;
+    }
+
+    div,
+    address,
     h1,
     h2,
     h3,
     h4,
     h5,
     h6,
-    main,
-    nav,
-    section {
+    main {
       outline: 2px rgba(0, 255, 0, 0.75) dashed;
     }
 
