--- a/assets/styles/scss/abstracts/_configs.scss
+++ b/assets/styles/scss/abstracts/_configs.scss
@@ -8,7 +8,7 @@
 
 // - <<----------<< Automatic >>---------->>
 
-@include automatic-wireframes(false);
+@include automatic-wireframes(true);
 
 // - <<----------<< Manual >>---------->>
 
