--- a/assets/styles/scss/pages/home-webshop/_section-3--about.scss
+++ b/assets/styles/scss/pages/home-webshop/_section-3--about.scss
@@ -79,25 +79,53 @@
     font-size: $font-size--2;
 
     @include breakpoint(s) {
+      height: 20%;
+    }
+
+    @include breakpoint(m) {
       height: 15%;
     }
   }
 
   &__hr {
     width: 80%;
+    height: 1%;
     border: 0;
     margin: 2% auto;
-    height: 1%;
+    background-image: linear-gradient(
+      to right,
+      hsla(
+        var(--color-foreground-h),
+        var(--color-foreground-s),
+        var(--color-foreground-l),
+        0
+      ),
+      hsla(
+        var(--color-background-h),
+        var(--color-background-s),
+        var(--color-background-l),
+        0.75
+      ),
+      hsla(
+        var(--color-foreground-h),
+        var(--color-foreground-s),
+        var(--color-foreground-l),
+        0
+      )
+    );
   }
 
   &__paragraph {
     overflow: auto;
     height: calc(#{$card-height} - (#{$buffer--s} * 10));
-
     color: var(--color-background);
     text-align: justify;
 
     @include breakpoint(s) {
+      height: 65%;
+    }
+
+    @include breakpoint(m) {
       height: 70%;
     }
   }
