--- a/assets/styles/scss/pages/home-webshop/_section-1--hero.scss
+++ b/assets/styles/scss/pages/home-webshop/_section-1--hero.scss
@@ -4,6 +4,7 @@
 
 .hero {
   position: relative;
+  padding: 0;
   background-attachment: fixed;
   background-image: url('/assets/media/images/marcel-teugels/favorites/kantrechten--05-upscaled.jpg');
   background-position: center center;
@@ -12,12 +13,6 @@
   &__container {
     height: 100vh;
     justify-content: center;
-    // animation: linear-gradient 15s ease infinite;
-    // background-color: $bg-color--transparant-gray---level-2;
-    // background-image: $linear-gradient--combo;
-    // background-size: 400% 400%;
-    // filter: contrast(50%);
-
     background-color: $bg-color--transparant-black---level-2;
     place-content: center;
     place-items: center;
@@ -36,11 +31,11 @@
   }
 
   &__title {
+    padding-top: 0;
     color: var(--color-secondary);
     filter: drop-shadow(0 0 0.1em var(--color-foreground));
     font-family: 'Oswald', sans-serif;
     font-size: $font-size--4;
     font-weight: 600;
-    padding-top: 0;
   }
 }
