--- a/assets/styles/css/main.css
+++ b/assets/styles/css/main.css
@@ -530,12 +530,12 @@ figcaption {
 }
 
 hr {
-  width: 80%;
+  width: 100%;
   height: 0.25rem;
   border: 0;
   margin: 1rem auto;
-  background-image: -webkit-gradient(linear, left top, right top, from(hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0)), color-stop(hsla(var(--color-foreground-h), var(--color-foreground-s), var(--color-foreground-l), 0.75)), to(hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0)));
-  background-image: linear-gradient(to right, hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0), hsla(var(--color-foreground-h), var(--color-foreground-s), var(--color-foreground-l), 0.75), hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0));
+  background-image: -webkit-gradient(linear, left top, right top, from(hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0)), color-stop(hsla(var(--color-foreground-h), var(--color-foreground-s), var(--color-foreground-l), 0.5)), color-stop(hsla(var(--color-foreground-h), var(--color-foreground-s), var(--color-foreground-l), 0.75)), color-stop(hsla(var(--color-foreground-h), var(--color-foreground-s), var(--color-foreground-l), 0.5)), to(hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0)));
+  background-image: linear-gradient(to right, hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0), hsla(var(--color-foreground-h), var(--color-foreground-s), var(--color-foreground-l), 0.5), hsla(var(--color-foreground-h), var(--color-foreground-s), var(--color-foreground-l), 0.75), hsla(var(--color-foreground-h), var(--color-foreground-s), var(--color-foreground-l), 0.5), hsla(var(--color-background-h), var(--color-background-s), var(--color-background-l), 0));
 }
 
 li {
@@ -1567,7 +1567,6 @@ input:checked + .slider::before {
 }
 
 .about__hr {
-  width: 80%;
   height: 1%;
   border: 0;
   margin: 2% auto;
@@ -1584,13 +1583,13 @@ input:checked + .slider::before {
 
 @media (min-width: 960px) {
   .about__paragraph {
-    height: 65%;
+    height: 62.5%;
   }
 }
 
 @media (min-width: 1280px) {
   .about__paragraph {
-    height: 70%;
+    height: 67.5%;
   }
 }
 
